Fix type for host port

--- a/doc/tutorials/setup_db.ipynb
+++ b/doc/tutorials/setup_db.ipynb
@@ -30,7 +30,7 @@
     "@dataclass\n",
     "class SandboxConfig:\n",
     "    EXTERNAL_HOST_NAME: str = \"192.168.124.93\"\n",
-    "    HOST_PORT: int = \"8888\"\n",
+    "    HOST_PORT: int = 8888\n",
     "\n",
     "    @property\n",
     "    def EXTERNAL_HOST(self):\n",
